--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,14 @@
     },
     "files": {
         "ignoreUnknown": false,
-        "includes": ["client/**/*", "!client/build", "!**/node_modules/**", "server/**/*", "!server/build", "config/scoring.json"]
+        "includes": [
+            "client/**/*",
+            "!client/build",
+            "!**/node_modules/**",
+            "server/**/*",
+            "!server/build",
+            "config/scoring.json"
+        ]
     },
     "formatter": {
         "enabled": true,
