--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
         "@dnd-kit/sortable": "^10.0.0",
         "@dnd-kit/utilities": "^3.2.2",
         "react": "^19.1.0",
-        "react-dom": "^19.1.0"
+        "react-dom": "^19.1.0",
+        "usehooks-ts": "^3.1.1"
     },
     "devDependencies": {
         "@types/react": "^19.1.8",
