share button improvements

--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
         "@types/react-dom": "^19.1.6",
         "@vitejs/plugin-react": "^4.6.0",
         "globals": "^16.3.0",
+        "user-agent-data-types": "^0.4.2",
         "vite": "^7.0.4"
     }
 }
