--- a/client/package.json
+++ b/client/package.json
@@ -21,11 +21,17 @@
         "usehooks-ts": "^3.1.1"
     },
     "devDependencies": {
+        "@testing-library/dom": "^10.4.0",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^14.6.1",
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
         "@vitejs/plugin-react": "^4.6.0",
         "globals": "^16.3.0",
+        "jsdom": "^26.1.0",
         "user-agent-data-types": "^0.4.2",
-        "vite": "^7.0.4"
+        "vite": "^7.0.4",
+        "vitest": "^3.2.4"
     }
 }
