--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -6,7 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.116.1",
-    "fastapi-cli>=0.0.8",
     "pyyaml>=6.0.2",
     "sqlmodel>=0.0.24",
     "uvicorn[standard]>=0.35.0",
@@ -14,7 +13,10 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "httpx>=0.28.1",
+    "pytest>=8.4.1",
     "ruff>=0.12.7",
+    "fastapi-cli>=0.0.8"
 ]
 
 [tool.ruff]
