--- a/client/biome.json
+++ b/client/biome.json
@@ -1,5 +1,5 @@
 {
-    "$schema": "https://biomejs.dev/schemas/2.1.1/schema.json",
+    "$schema": "https://biomejs.dev/schemas/2.1.3/schema.json",
     "vcs": {
         "enabled": false,
         "clientKind": "git",
@@ -7,14 +7,7 @@
     },
     "files": {
         "ignoreUnknown": false,
-        "includes": [
-            "client/**/*",
-            "!client/build",
-            "!**/node_modules/**",
-            "server/**/*",
-            "!server/build",
-            "config/scoring.json"
-        ]
+        "includes": ["./**/*", "!./build", "!**/node_modules/**"]
     },
     "formatter": {
         "enabled": true,
