--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
         "usehooks-ts": "^3.1.1"
     },
     "devDependencies": {
+        "@biomejs/biome": "2.1.3",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
@@ -32,6 +33,7 @@
         "@vitejs/plugin-react": "^4.6.0",
         "globals": "^16.3.0",
         "jsdom": "^26.1.0",
+        "typescript": "^5.9.2",
         "user-agent-data-types": "^0.4.2",
         "vite": "^7.0.4",
         "vitest": "^3.2.4"
