--- a/server/config/game_rules.yaml
+++ b/server/config/game_rules.yaml
@@ -3,33 +3,33 @@ multipliers:
     4: 5
     5: 4
     6: 3
-# Letter scores based on Peter Norvig's letter-frequency calculations.
+# Letter scores based on Peter Norvig's letter-frequency calculations, scaled down.
 # http://norvig.com/scrabble-letter-scores.html
-letterValues:
+letter_values:
     A: 1
-    B: 3
-    C: 3
+    B: 2
+    C: 2
     D: 1
     E: 1
-    F: 4
-    G: 2
-    H: 3
+    F: 2
+    G: 1
+    H: 2
     I: 1
-    J: 8
-    K: 6
+    J: 4
+    K: 3
     L: 1
-    M: 2
+    M: 1
     N: 1   # TODO: In the distant past, `N` was a YAML shortcut for "false".  I don't think that's the case anymore, but if this causes problems, change the key here to `"N"` (that is, with quotes) to force it to be a string. -- JDB 2025-07-14
     O: 1
-    P: 2
-    Q: 10
+    P: 1
+    Q: 4
     R: 1
     S: 1
     T: 1
-    U: 3
-    V: 6
-    W: 4
-    X: 8
-    Y: 4
-    Z: 8
-timerSeconds: 300 # in seconds
+    U: 2
+    V: 3
+    W: 2
+    X: 4
+    Y: 2
+    Z: 4
+timer_seconds: 300 # in seconds
