--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pydantic-settings>=2.10.1",
     "pyyaml>=6.0.2",
     "sqlmodel>=0.0.24",
+    "typer>=0.16.0",
     "uvicorn[standard]>=0.35.0",
 ]
 
@@ -17,7 +18,8 @@ dev = [
     "httpx>=0.28.1",
     "pytest>=8.4.1",
     "ruff>=0.12.7",
-    "fastapi-cli>=0.0.8"
+    "fastapi-cli>=0.0.8",
+    "ipython>=9.4.0",
 ]
 
 [tool.ruff]
