--- a/client/biome.json
+++ b/client/biome.json
@@ -7,7 +7,7 @@
     },
     "files": {
         "ignoreUnknown": false,
-        "includes": ["./**/*", "!./build", "!**/node_modules/**"]
+        "includes": ["./**/*", "!build", "!**/node_modules/**"]
     },
     "formatter": {
         "enabled": true,
