--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "dev": "vite --port 2000",
         "build": "tsc -b && vite build",
+        "watch": "vite build --watch",
         "lint": "biome check --fix",
         "preview": "vite preview",
         "test": "vitest run",
@@ -28,6 +29,7 @@
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.3.0",
         "@testing-library/user-event": "^14.6.1",
+        "@types/node": "^24.2.1",
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
         "@vitejs/plugin-react": "^4.6.0",
