--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -23,7 +23,8 @@
         "noUnusedParameters": true,
         "erasableSyntaxOnly": true,
         "noFallthroughCasesInSwitch": true,
-        "noUncheckedSideEffectImports": true
+        "noUncheckedSideEffectImports": true,
+        "esModuleInterop": true
     },
     "include": ["src", "vitest.setup.ts"]
 }
