--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
         "@dnd-kit/utilities": "^3.2.2",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
+        "react-router": "^7.8.0",
         "usehooks-ts": "^3.1.1"
     },
     "devDependencies": {
