--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "fastapi>=0.116.1",
     "pydantic-settings>=2.10.1",
     "pyyaml>=6.0.2",
+    "redis[hiredis]>=5.0.0",
     "sqlmodel>=0.0.24",
     "typer>=0.16.0",
     "uvicorn[standard]>=0.35.0",
@@ -27,6 +28,7 @@ dev = [
     "ruff>=0.12.7",
     "fastapi-cli>=0.0.8",
     "ipython>=9.4.0",
+    "fakeredis>=2.31.0",
 ]
 
 [tool.ruff]
