dev4.6: updates from first deployment
Major changes:
* Replaced Nginx with Cappy as webserver for the front-end
* Re-evaluated .env files.  Almost nothing in my .env files was actually
secret, so they're now in the repo/Docker image by default.  (I added a
separate .env.secret for actual secrets)
* Created a separate docker-compose.prod.yaml with prod-specific
deployment (such as the address of the EFS file system).  This contains
secrets, so this repo contains a docker-compose.prod.yaml.example
template instead.
* Added deployment.md with instructions for manual deployment

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -14,9 +14,7 @@ RUN pnpm run build
 
 
 
-FROM nginx:alpine
+FROM caddy:2.10-alpine
 
-COPY --from=build /app/build/dist /usr/share/nginx/html
-COPY ./nginx.conf /etc/nginx/conf.d/default.conf
-
-EXPOSE 80
+COPY --from=build /app/build/dist /usr/share/caddy/html
+COPY ./Caddyfile /etc/caddy/Caddyfile
