--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -56,6 +56,8 @@ jobs:
           context: ./client
           file: ./client/Dockerfile
           push: true
+          build-args: |
+            SENTRY_AUTH_TOKEN=${{ secrets.SENTRY_AUTH_TOKEN }}
           tags: |
             ${{ vars.ECR_REPO_PREFIX }}/${{ vars.ECR_PROJECT_NAME }}/frontend:latest
             ${{ vars.ECR_REPO_PREFIX }}/${{ vars.ECR_PROJECT_NAME }}/frontend:${{ github.sha }}
