--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,13 @@
     "version": "1.0.0",
     "type": "module",
     "description": "The front-end client for a daily word puzzle game.",
-    "keywords": ["react", "word-game", "puzzle", "typescript", "vite"],
+    "keywords": [
+        "react",
+        "word-game",
+        "puzzle",
+        "typescript",
+        "vite"
+    ],
     "repository": {
         "type": "git",
         "url": "git+https://github.com/madjaqk/lexo.git"
@@ -28,6 +34,8 @@
         "@dnd-kit/core": "^6.3.1",
         "@dnd-kit/sortable": "^10.0.0",
         "@dnd-kit/utilities": "^3.2.2",
+        "@sentry/react": "^10.11.0",
+        "@sentry/vite-plugin": "^4.3.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-router": "^7.8.0",
