--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pydantic-settings>=2.10.1",
     "pyyaml>=6.0.2",
     "redis[hiredis]>=5.0.0",
+    "sentry-sdk[fastapi]>=2.37.1",
     "sqlmodel>=0.0.24",
     "typer>=0.16.0",
     "uvicorn[standard]>=0.35.0",
