--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -73,93 +73,16 @@ jobs:
             ${{ vars.ECR_REPO_PREFIX }}/${{ vars.ECR_PROJECT_NAME }}/scheduler:latest
             ${{ vars.ECR_REPO_PREFIX }}/${{ vars.ECR_PROJECT_NAME }}/scheduler:${{ github.sha }}
 
-      - name: Create docker-compose.prod.yaml from template
+      - name: Deploy to EC2
         env:
-          ECR_REPO_PREFIX: ${{ vars.ECR_REPO_PREFIX }}
+          EC2_INSTANCE_ID: ${{ secrets.EC2_INSTANCE_ID }}
+          EC2_USER: ${{ secrets.EC2_USER }}
           ECR_PROJECT_NAME: ${{ vars.ECR_PROJECT_NAME }}
+          ECR_REPO_PREFIX: ${{ vars.ECR_REPO_PREFIX }}
           EFS_ADDRESS: ${{ secrets.EFS_ADDRESS }}
+          IMAGE_TAG: ${{ github.sha }}
           PUZZLE_GENERATION_SALT: ${{ secrets.PUZZLE_GENERATION_SALT }}
+          S3_BUCKET: ${{ secrets.S3_BUCKET }}
         run: |
-          envsubst < docker-compose.prod.yaml.template > docker-compose.prod.yaml
-
-      - name: Wait for all images to be available in ECR
-        run: |
-          IMAGE_TAG=${{ github.sha }}
-          ECR_BASE=${{ vars.ECR_REPO_PREFIX }}/${{ vars.ECR_PROJECT_NAME }}
-          REPOS=("server" "frontend" "scheduler")
-
-          for REPO in "${REPOS[@]}"; do
-            echo "=== Checking $ECR_BASE/$REPO via Docker Manifest API ==="
-            MAX_ATTEMPTS=12
-            for i in $(seq 1 $MAX_ATTEMPTS); do
-              if docker manifest inspect "$ECR_BASE/$REPO:$IMAGE_TAG" > /dev/null 2>&1; then
-                echo "✅ $ECR_BASE/$REPO: Image $IMAGE_TAG found via Docker Manifest API"
-
-                SHA_DIGEST=$(docker manifest inspect "$ECR_BASE/$REPO:$IMAGE_TAG" | jq -r '.manifests[] | select(.platform.architecture != "unknown") | .digest')
-                LATEST_DIGEST=$(docker manifest inspect "$ECR_BASE/$REPO:latest" | jq -r '.manifests[] | select(.platform.architecture != "unknown") | .digest')
-
-                echo "Image SHA digest: $SHA_DIGEST"
-                echo "Latest digest:    $LATEST_DIGEST"
-
-                if [ "$SHA_DIGEST" = "$LATEST_DIGEST" ] && [ -n "$SHA_DIGEST" ]; then
-                  echo "✅ $ECR_BASE/$REPO: latest tag points to the same image as $IMAGE_TAG"
-                  break
-                else
-                  echo "⏳ $ECR_BASE/$REPO: latest tag not yet updated"
-                fi
-              else
-                echo "⏳ $ECR_BASE/$REPO: Image $IMAGE_TAG not found via Docker Manifest API"
-              fi
-
-              if [ "$i" -eq 12 ]; then
-                echo "❌ $ECR_BASE/$REPO: Timed out waiting for image"
-                exit 1
-              fi
-
-              sleep 10
-            done
-          done
-
-      - name: Copy docker-compose file to S3, then retrieve on EC2 via SSM
-        run: |
-          aws s3 cp docker-compose.prod.yaml s3://${{ secrets.S3_BUCKET }}/docker-compose.prod.yaml
-
-          COMMAND_ID=$(aws ssm send-command \
-            --instance-ids "${{ secrets.EC2_INSTANCE_ID }}" \
-            --document-name "AWS-RunShellScript" \
-            --comment "Copy docker-compose.prod.yaml via S3 to EC2 and restart Docker" \
-            --parameters commands="\
-                cd /home/${{ secrets.EC2_USER }} && \
-                aws s3 cp s3://${{ secrets.S3_BUCKET }}/docker-compose.prod.yaml docker-compose.yaml && \
-                docker-compose pull --quiet && \
-                docker-compose up --force-recreate -d" \
-            --query 'Command.CommandId' \
-            --output text \
-          )
-
-          echo "SSM command ID: $COMMAND_ID"
-
-          # Wait for command to complete
-          aws ssm wait command-executed --command-id "$COMMAND_ID" --instance-id "${{ secrets.EC2_INSTANCE_ID }}" || true
-
-          # Check if it actually succeeded
-          STATUS=$(\
-            aws ssm get-command-invocation \
-              --command-id "$COMMAND_ID" \
-              --instance-id "${{ secrets.EC2_INSTANCE_ID }}" \
-              --query 'Status' \
-              --output text\
-          )
-          echo "SSM command status: $STATUS"
-
-          aws ssm get-command-invocation \
-            --command-id "$COMMAND_ID" \
-            --instance-id "${{ secrets.EC2_INSTANCE_ID }}" \
-            --query '{stdout: StandardOutputContent, stderr: StandardErrorContent}' \
-            --output json
-
-          if [ "$STATUS" != "Success" ]; then
-            exit 1
-          fi
-
-          echo "Deployment completed successfully."
+          chmod +x deploy_to_ec2.sh
+          ./deploy_to_ec2.sh
